Fix view on mobile (ish)

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,6 +106,7 @@ body.index table.parts {
       display: block;
       width: 18%;
       height: 10rem;
+      min-width: 14rem;
       margin-right: 2%;
       margin-bottom: 1rem;
       float: left; }
