--- a/resources/assets/sass/pages/index.sass
+++ b/resources/assets/sass/pages/index.sass
@@ -16,6 +16,7 @@ body.index
                 display: block
                 width: 18%
                 height: 10rem
+                min-width: 14rem
                 margin-right: 2%
                 margin-bottom: 1rem
                 float: left
